<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- A -->
    <string name="action_settings">Settings</string>
    <string name="add_failed">Add Failed</string>
    <string name="already_in_first_page">Already in First page</string>
    <string name="app_name">Answer</string>

    <!-- C -->
    <string name="cancel">Cancel</string>
    <string name="commit">Commit</string>
    <string name="commit_success">Commit Success</string>
    <string name="confirm">Confirm</string>
    <string name="continue_test">Continue Test</string>

    <!-- E -->
    <string name="empty"/>
    <string name="examining">Examining</string>
    <string name="exam_manual_end">Do you want to end the exam and commit?</string>
    <string name="exam_time_out">Time out, do you want to commit?</string>
    <string name="exit">Exit</string>

    <!-- L -->
    <string name="last_question">Last Question</string>

    <!-- M -->
    <string name="my_errors">My Errors</string>
    <string name="multiple_choice">(Multiple Choice)</string>

    <!-- N -->
    <string name="next_question">Next Question</string>
    <string name="no_data">No Data</string>

    <!-- P -->
    <string name="please_make_a_choice">Please make a choice</string>

    <!-- Q -->
    <string name="qa_test">QA Test</string>

    <!-- S -->
    <string name="single_choice">(Single Choice)</string>
    <string name="start_test">Start Test</string>

    <!-- T -->
    <string name="test_single_choice">Single Choice</string>
    <string name="test_single_choice_with_pictures">Single Choice With Pictures</string>
    <string name="test_multiple_choice">Multiple Choice</string>
    <string name="test_true_or_false">True Or False</string>
    <string name="tips">Tips</string>
    <string name="true_or_false">(True or False)</string>

    <!-- W -->
    <string name="what_is_your_choice">What is your choice?</string>

</resources>
