<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eaeaea">

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#288df5">

        <LinearLayout
            android:id="@+id/activity_prepare_test_upLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:src="@drawable/ic_practice_up_subject"/>

            <TextView
                style="@style/menu_bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_menu_margin_8"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:text="@string/last_question"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_prepare_test_totalLayout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:src="@drawable/ic_practice_tatal_index"/>

            <TextView
                android:id="@+id/activity_prepare_test_totalTv"
                style="@style/menu_bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_menu_margin_8"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:text="@string/empty"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_prepare_test_errorLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menu_bottom_errorIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:src="@drawable/ic_practice_test_error"/>

            <TextView
                android:id="@+id/menu_bottom_errorTV"
                style="@style/menu_bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_menu_margin_8"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:text="@string/my_errors"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_prepare_test_nextLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menu_bottom_nextIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:src="@drawable/ic_practice_next_subject"/>

            <TextView
                android:id="@+id/menu_bottom_nextTV"
                style="@style/menu_bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_menu_margin_8"
                android:layout_marginTop="@dimen/home_menu_margin_5"
                android:text="@string/next_question"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_margin="@dimen/margin_10"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_prepare_test_img"
                android:layout_margin="@dimen/margin_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_question_default"
                android:contentDescription="@string/empty"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <TextView
                    android:id="@+id/activity_prepare_test_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_menu_margin_8"
                    android:textColor="@color/practice_test_no_text"
                    android:visibility="gone"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/activity_prepare_test_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_menu_margin_8"
                    android:textColor="@color/practice_test_content_text"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_prepare_test_radioBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/activity_prepare_test_layout_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_choose_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/home_menu_margin_8">

                    <ImageView
                        android:id="@+id/vote_submit_select_image_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_practice_test_normal"/>

                    <TextView
                        android:id="@+id/vote_submit_select_text_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:text="@string/please_make_a_choice"
                        android:textColor="@color/practice_test_result_text"
                        android:textSize="16sp"
                        />

                    <ImageView
                        android:id="@+id/vote_submit_select_image_a_"
                        android:layout_width="150dip"
                        android:layout_height="75dip"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_practice_test_normal"
                        android:visibility="gone"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_prepare_test_layout_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_choose_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/home_menu_margin_8">

                    <ImageView
                        android:id="@+id/vote_submit_select_image_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_practice_test_normal"/>

                    <TextView
                        android:id="@+id/vote_submit_select_text_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:text="@string/please_make_a_choice"
                        android:textColor="@color/practice_test_result_text"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/vote_submit_select_image_b_"
                        android:layout_width="150dip"
                        android:layout_height="75dip"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_practice_test_normal"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_prepare_test_layout_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_choose_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/home_menu_margin_8">

                    <ImageView
                        android:id="@+id/vote_submit_select_image_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_practice_test_normal"/>

                    <TextView
                        android:id="@+id/vote_submit_select_text_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:text="@string/please_make_a_choice"
                        android:textColor="@color/practice_test_result_text"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/vote_submit_select_image_c_"
                        android:layout_width="150dip"
                        android:layout_height="75dip"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_practice_test_normal"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_prepare_test_layout_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_choose_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/home_menu_margin_8">

                    <ImageView
                        android:id="@+id/vote_submit_select_image_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_practice_test_normal"/>

                    <TextView
                        android:id="@+id/vote_submit_select_text_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:text="@string/please_make_a_choice"
                        android:textColor="@color/practice_test_result_text"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/vote_submit_select_image_d_"
                        android:layout_width="150dip"
                        android:layout_height="75dip"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_practice_test_normal"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_prepare_test_layout_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_choose_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/home_menu_margin_8">

                    <ImageView
                        android:id="@+id/vote_submit_select_image_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_practice_test_normal"/>

                    <TextView
                        android:id="@+id/vote_submit_select_text_e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:text="@string/please_make_a_choice"
                        android:textColor="@color/practice_test_result_text"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/vote_submit_select_image_e_"
                        android:layout_width="150dip"
                        android:layout_height="75dip"
                        android:layout_marginLeft="@dimen/home_menu_margin_8"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_practice_test_normal"
                        android:visibility="gone"
                        />
                </LinearLayout>


            </LinearLayout>

            <!-- 错题分析 -->

            <LinearLayout
                android:id="@+id/activity_prepare_test_wrongLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/btn_height"
                android:orientation="vertical"
                android:padding="@dimen/margin_10"
                android:visibility="gone"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_practice_test_analyze"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/ic_practice_test_explain_detail"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_prepare_test_explain_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/practice_test_result_detail_text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>